syntax = "proto3";

option go_package = "github.com/smartcontractkit/chainlink/v2/core/services/synchronization/telem";

package telem;

message EnhancedEA {
  string data_source=1;
  int64 value=2;
  int64 bridge_task_run_started_timestamp=3;
  int64 bridge_task_run_ended_timestamp=4;
  int64 provider_requested_timestamp=5;
  int64 provider_received_timestamp=6;
  int64 provider_data_stream_established=7;
  int64 provider_data_received=8;
  int64 provider_indicated_time=9;
  string feed=10;
  string chain_id=11;
  int64 observation=12;
  string config_digest = 13;
  int64 round=14;
  int64 epoch=15;
}
